crates/tokmd-format/tests/snapshots/snapshots__lang_json.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: pretty
---
{
  "args": {
    "children": "collapse",
    "format": "json",
    "top": 0,
    "with_files": false
  },
  "children": "collapse",
  "generated_at_ms": 0,
  "mode": "lang",
  "rows": [
    {
      "avg_lines": 120,
      "bytes": 50000,
      "code": 1000,
      "files": 10,
      "lang": "Rust",
      "lines": 1200,
      "tokens": 2500
    },
    {
      "avg_lines": 30,
      "bytes": 1000,
      "code": 50,
      "files": 2,
      "lang": "TOML",
      "lines": 60,
      "tokens": 125
    }
  ],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "top": 0,
  "total": {
    "avg_lines": 105,
    "bytes": 51000,
    "code": 1050,
    "files": 12,
    "lines": 1260,
    "tokens": 2625
  },
  "warnings": [],
  "with_files": false
}
