crates/tokmd-format/tests/snapshots/snapshots__lang_md_empty.snap
---
source: crates/tokmd-format/tests/snapshots.rs
assertion_line: 581
expression: output
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|**Total**|0|0|0|0|
