crates/tokmd-format/tests/snapshots/snapshots__lang_tsv_empty.snap
---
source: crates/tokmd-format/tests/snapshots.rs
assertion_line: 596
expression: output
---
Lang	Code	Lines	Bytes	Tokens
Total	0	0	0	0
